--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 duplicate = "1.0.0"
 num = "0.4.1"
 num-traits = "0.2.16"
-polyx = {version = "0.1.0", path = "../polyx"}
+polyx = {version = "0.1.0", git = "https://github.com/Silzinc/polyx"}
